<resources>
    <string name="app_name">sleeper_frontend</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="login_scr_edittext_id">아이디</string>
    <string name="login_scr_edittext_password">비밀번호</string>
    <string name="login_scr_btn_login">로그인</string>
    <string name="login_scr_btn_register"><u>회원가입</u></string>

    <string name="logo">Sleeper</string>

    <string name="register_scr_textview_id">아이디</string>
    <string name="register_scr_edittext_id_hint">영문 8~20자</string>
    <string name="register_scr_btn_verification">중복확인</string>
    <string name="register_scr_textview_password">비밀번호</string>
    <string name="register_scr_edittext_password_hint">영문, 숫자, 특수문자 모두 포함 8~20자</string>
    <string name="register_scr_textview_special_word">특수 문자는 !, @, #, $, %, ^, &amp;, *, ;만 이용 가능합니다.</string>
    <string name="register_scr_textview_password_verification">비밀번호 확인</string>
    <string name="register_scr_edittext_password_verification_hint">영문, 숫자, 특수문자 모두 포함 8~20자</string>
    <string name="register_scr_textview_username">닉네임</string>
    <string name="register_scr_edittext_username_hint">한글 3~8자</string>
    <string name="register_scr_textview_age">나이</string>
    <string name="register_scr_edittext_age_hint">나이 선택</string>
    <string name="register_scr_finish">완료</string>

    <string name="survey_scr_network">%1$d:%2$s</string>
    <string name="survey_scr_textview_goal_start">목표 수면 시작 시간</string>
    <string name="survey_scr_textview_goal_end">목표 기상 시간</string>
    <string name="survey_scr_btn_choose">시간 선택</string>
    <string name="survey_scr_textview">%1$d:%2$s</string>
    <string name="survey_scr_finish">완료</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="popup_scr_shop">상점</string>
    <string name="popup_scr_friend">친구</string>

    <string name="home_frg_start_sleep">수면 시작</string>

    <string name="diary_frag_diary">Thanks Diary</string>
    <string name="diary_frag_hint">오늘은 어떤 좋은 일이 있었나요? :)</string>
    <string name="diary_frag_save">등록</string>

    <string name="home_b_frg_stop_sleep">수면 종료</string>

    <string name="calendar_frg_title">Calendar</string>
    <string name="calendar_frg_stats_title">이달의 통계</string>
    <string name="calendar_frg_stats_goal">목표 수면 시간</string>
    <string name="calendar_frg_stats_goal_time">%1$s - %2$s</string>
    <string name="calendar_frg_stats_real">실제 수면 시간</string>
    <string name="calendar_frg_stats_real_time">%1$s - %2$s</string>
    <string name="calendar_frg_stats_score">%1$d%</string>
    <string name="calendar_frg_stats_score_text">수면 점수</string>

    <string name="calendar_inside_frg_date">%1$s. %2$s. %3$s</string>
    <string name="calendar_inside_frg_goal">목표 수면 시간</string>
    <string name="calendar_inside_frg_goal_time">%1$s - %2$s</string>
    <string name="calendar_inside_frg_real">실제 수면 시간</string>
    <string name="calendar_inside_frg_real_time">%1$s - %2$s</string>
    <string name="calendar_inside_frg_diary">주변에 좋은 사람들이 많다는게 감사하다.</string>
    <string name="calendar_inside_frg_update">수정</string>
    <string name="calendar_inside_frg_delete">삭제</string>

    <string name="alarm_frg_title">Alarm</string>
    <string name="alarm_frg_textview_time">%1$s:%2$s</string>
    <string name="alarm_frg_textview_sleep_time">오늘의 취침 시간</string>
    <string name="alarm_frg_textview_wake_time">오늘의 기상 시간</string>
    <string name="alarm_frg_textview_update">수정</string>

    <string name="alarm_inside_frg_title">Alarm</string>
    <string name="alarm_inside_frg_textview_sleep_time">오늘의 취침 시간</string>
    <string name="alarm_inside_frg_textview_wake_time">오늘의 기상 시간</string>
    <string name="alarm_inside_frg_textview_set_time">시간 설정</string>
    <string name="alarm_inside_frg_textview_recommend_time">추천 기상 시간</string>
    <string name="alarm_inside_frg_textview_finish">완료</string>

    <string-array name="custom_weekdays">
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
    </string-array>

    <string-array name="custom_months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

</resources>