<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:plainpie="http://schemas.android.com/apk/res-auto"
    tools:context=".CalendarFragment"
    android:background="@color/black_50">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="45dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar_frg_title"
            android:textColor="@color/logo"
            android:textSize="16sp"
            android:fontFamily="@font/font_the150"/>

        <CalendarView
            android:id="@+id/calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:theme="@style/CalenderViewCustom"
            android:dateTextAppearance="@style/CalenderViewDateCustomText"
            android:weekDayTextAppearance="@style/CalenderViewWeekCustomText" />

        <FrameLayout
            android:layout_width="302dp"
            android:layout_height="167dp"
            android:background="@drawable/calendar_frag_outside_stats_background"
            android:layout_marginTop="50dp"
            android:elevation="20dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calendar_frg_stats_title"
                    android:textSize="12sp"
                    android:fontFamily="@font/font_the160"
                    android:textColor="#AFB1CE"
                    android:layout_marginBottom="5dp"/>

                <View
                    android:background="#AFB1CE"
                    android:layout_width="273dp"
                    android:layout_height="1dp" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp" >

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_marginEnd="100dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/calendar_frg_stats_goal"
                            android:textSize="11sp"
                            android:textColor="@color/goal_time"
                            android:fontFamily="@font/font_the150"
                            android:layout_marginBottom="5dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/calendar_frg_stats_goal_time"
                            android:textColor="#FFFFFF"
                            android:textSize="12sp"
                            android:fontFamily="@font/font_the150"
                            android:background="@drawable/calendar_frg_show_goal_time_background"
                            android:textAlignment="center"
                            android:gravity="center"
                            android:layout_marginBottom="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/calendar_frg_stats_real"
                            android:textSize="11sp"
                            android:textColor="@color/real_time"
                            android:fontFamily="@font/font_the150"
                            android:layout_marginBottom="5dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/calendar_frg_stats_real_time"
                            android:textColor="#FFFFFF"
                            android:textSize="12sp"
                            android:fontFamily="@font/font_the150"
                            android:background="@drawable/calendar_frag_show_real_time_background"
                            android:textAlignment="center"
                            android:gravity="center" />


                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/calendar_frg_stats_score"
                            android:textColor="#292D30"
                            android:textSize="14sp"
                            android:fontFamily="@font/font_the150"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/calendar_frg_stats_score_text"
                            android:textColor="#797979"
                            android:textSize="7sp"
                            android:fontFamily="@font/font_the130"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </FrameLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>