<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiaryFragment">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="45dp">

            <!--<android.widget.Button
                android:id="@+id/btn_show_more"
                android:layout_width="24dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_show_more"
                android:layout_marginLeft="35dp"/>-->

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diary_frag_diary"
                android:fontFamily="@font/font_the150"
                android:textSize="16sp"
                android:textColor="@color/logo"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <!--<android.widget.Button
                android:layout_width="24dp"
                android:layout_height="25dp"
                android:background="@drawable/ic_issue"
                android:layout_marginRight="35dp"/>
-->
        </LinearLayout>

        <android.widget.RelativeLayout
            android:id="@+id/wrap_diary_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="80dp" >

            <EditText
                android:id="@+id/diary"
                android:layout_width="380dp"
                android:layout_height="550dp"
                android:gravity="top"
                android:paddingTop="40dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingBottom="380dp"

                android:background="@drawable/letter"
                android:hint="@string/diary_frag_hint"
                android:fontFamily="@font/font_the140"
                android:textSize="14sp"
                android:textColor="@color/purple"
                android:textColorHint="@color/lilac"

                android:inputType="textMultiLine"
                android:scrollHorizontally="false"
                android:imeOptions="actionDone"
                android:maxWidth="25dp"
                android:singleLine="false" />

            <android.widget.Button
                android:id="@+id/btn_save_diary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/diary"
                android:layout_alignBottom="@+id/diary"
                android:layout_marginBottom="45dp"
                android:layout_marginEnd="15dp"
                android:text="@string/diary_frag_save"
                android:fontFamily="@font/font_the160"
                android:textSize="15sp"
                android:textColor="@drawable/btn_save_diary"
                android:background="@null"/>

        </android.widget.RelativeLayout>

    </LinearLayout>

</FrameLayout>